--- a/maquettes/login.html
+++ b/maquettes/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>REPL Inscription</title>
+        <title>REPL login</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -14,7 +14,7 @@
             <div id="headerDescription">
                 <h3>Un REPL comme outil d'enseignment</h3>
                 <nav class="pull-right">
-                    <a href="login.html" class="btn btn-lg btn-primary">Se connecter <span class="glyphicon glyphicon-log-in"></span></a>
+                    <a href="signup.html" class="btn btn-lg btn-primary">S'inscrire <span class="glyphicon glyphicon-user"></span></a>
                 </nav>
             </div>
 
@@ -22,13 +22,9 @@
 
         <main>
             <div id="signupContainer">
-                <h2 class="text-center">S'inscrire <span class="glyphicon glyphicon-user"></span></h2>
+                <h2 class="text-center">Se connecter <span class="glyphicon glyphicon-log-in"></span></h2>
             </div>
             <form action="postEndpoint" method="POST">
-                <div class="form-group">
-                    <label for="nameInput">Nom</label>
-                    <input type="text" class="form-control" id="nameInput" placeholder="nom">
-                </div>
                 <div class="form-group">
                     <label for="emailInput">Adresse courriel</label>
                     <input type="email" class="form-control" id="emailInput" placeholder="courriel">
@@ -36,10 +32,6 @@
                 <div class="form-group">
                     <label for="passwordInput">Mot de passe</label>
                     <input type="password" class="form-control" id="passwordInput" placeholder="mot de passe">
-                </div>
-                <div class="form-group">
-                    <label for="repeatPasswordInput">Répéter de passe</label>
-                    <input type="password" class="form-control" id="repeatPasswordInput" placeholder="mot de passe">
                 </div>
                 <div id="submitContainer" class="text-center">
                     <button type="submit" class="btn btn-lg btn-success text-center">Soumettre <span class="glyphicon glyphicon-send"></span></button>
