--- a/maquettes/logout.html
+++ b/maquettes/logout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>REPL Inscription</title>
+        <title>REPL logout</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -20,32 +20,7 @@
 
         </header>
 
-        <main>
-            <div id="signupContainer">
-                <h2 class="text-center">S'inscrire <span class="glyphicon glyphicon-user"></span></h2>
-            </div>
-            <form action="postEndpoint" method="POST">
-                <div class="form-group">
-                    <label for="nameInput">Nom</label>
-                    <input type="text" class="form-control" id="nameInput" placeholder="nom">
-                </div>
-                <div class="form-group">
-                    <label for="emailInput">Adresse courriel</label>
-                    <input type="email" class="form-control" id="emailInput" placeholder="courriel">
-                </div>
-                <div class="form-group">
-                    <label for="passwordInput">Mot de passe</label>
-                    <input type="password" class="form-control" id="passwordInput" placeholder="mot de passe">
-                </div>
-                <div class="form-group">
-                    <label for="repeatPasswordInput">Répéter de passe</label>
-                    <input type="password" class="form-control" id="repeatPasswordInput" placeholder="mot de passe">
-                </div>
-                <div id="submitContainer" class="text-center">
-                    <button type="submit" class="btn btn-lg btn-success text-center">Soumettre <span class="glyphicon glyphicon-send"></span></button>
-                </div>
-            </form>
-        </main>
+        <h2 class="alert alert-info text-center">Vous êtes déconnecté Jonathan 👋</h2>
 
         <footer class="footer">
             <h4>Fait à Gatineau par <a href="http://jonathanGB.com">Jonathan Guillotte-Blouin</a></h4>
