--- a/maquettes/login.html
+++ b/maquettes/login.html
@@ -7,10 +7,11 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="icon" type="image/ico" href="img/favicon.ico">
     </head>
     <body class="container">
         <header class="jumbotron">
-            <h1><a href="#">REPL en classe</a></h1>
+          <h1><a href="#"><img src="img/logo.png" alt="logo" width="100" height="100"> REPL en classe</a></h1>
             <div id="headerDescription">
                 <h3>Un REPL comme outil d'enseignment</h3>
                 <nav class="pull-right">
@@ -45,6 +46,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="js/signup.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
