création de maquettes initiales pour les dashboards des fichiers et des groupes

--- a/maquettes/signup.html
+++ b/maquettes/signup.html
@@ -23,7 +23,7 @@
 
         <main>
             <div id="signupContainer">
-                <h2 class="text-center">S'inscrire <span class="glyphicon glyphicon-user"></span></h2>
+                <h2 class="header text-center">S'inscrire <span class="glyphicon glyphicon-user"></span></h2>
             </div>
             <form action="postEndpoint" method="POST">
                 <div class="form-group">
