--- a/maquettes/filesDashboard.html
+++ b/maquettes/filesDashboard.html
@@ -2,50 +2,53 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>REPL login</title>
+        <title>REPL editor - files</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link rel="stylesheet" href="style/style.css">
-        <link rel="icon" type="image/ico" href="img/favicon.ico">
+				<link rel="icon" type="image/ico" href="img/favicon.ico">
     </head>
     <body class="container">
         <header class="jumbotron">
-          <h1><a href="#"><img src="img/logo.png" alt="logo" width="100" height="100"> REPL en classe</a></h1>
+            <h1><a href="#"><img src="img/logo.png" alt="logo" width="100" height="100"> REPL en classe</a></h1>
             <div id="headerDescription">
                 <h3>Un REPL comme outil d'enseignment</h3>
                 <nav class="pull-right">
-                    <a href="signup.html" class="btn btn-lg btn-primary">S'inscrire <span class="glyphicon glyphicon-user"></span></a>
+                    <a href="logout.html" class="btn btn-lg btn-primary">Se déconnecter <span class="glyphicon glyphicon-log-out"></span></a>
                 </nav>
             </div>
-
         </header>
 
-        <main>
-            <div id="signupContainer">
-                <h2 class="header text-center">Se connecter <span class="glyphicon glyphicon-log-in"></span></h2>
-            </div>
-            <form action="postEndpoint" method="POST">
-                <div class="form-group">
-                    <label for="emailInput">Adresse courriel</label>
-                    <input type="email" class="form-control" id="emailInput" placeholder="courriel">
-                </div>
-                <div class="form-group">
-                    <label for="passwordInput">Mot de passe</label>
-                    <input type="password" class="form-control" id="passwordInput" placeholder="mot de passe">
-                </div>
-                <div id="submitContainer" class="text-center">
-                    <button type="submit" class="btn btn-lg btn-success text-center">Soumettre <span class="glyphicon glyphicon-send"></span></button>
-                </div>
-            </form>
-        </main>
-
+				<main class="files-list list">
+          <button class="btn btn-lg btn-success add">Nouveau fichier <span class="glyphicon glyphicon-plus"></span></button>
+          <div class="text-center">
+            <h2 class="header">CBA 1234: Introduction à blabla</h2>
+          </div>
+          <ul>
+            <li>
+              <a href="#"><h3>foo1.js</h3></a>
+            </li>
+            <li>
+              <a href="#"><h3>foo2.go</h3></a>
+            </li>
+            <li>
+              <a href="#"><h3>foo3.pl</h3></a>
+            </li>
+            <li>
+              <a href="#"><h3>foo4.pro</h3></a>
+            </li>
+            <li>
+              <a href="#"><h3>foo5.ex</h3></a>
+            </li>
+          </ul>
+				</main>
         <footer class="footer">
             <h4>Fait à Gatineau par <a href="http://jonathanGB.com">Jonathan Guillotte-Blouin</a></h4>
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="js/main.js"></script>
+				<script src="js/main.js"></script>
     </body>
 </html>
