ajouter maquette de status de la classe, et ajout de liens entre les pages

--- a/maquettes/groupsDashboard.html
+++ b/maquettes/groupsDashboard.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>REPL editor - files</title>
+        <title>REPL editor - groupes</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -27,13 +27,13 @@
           </div>
           <ul>
             <li>
-              <a href="#"><h3>ABC 1234</h3></a>
+              <a href="filesDashboard.html"><h3>ABC 1234</h3></a>
             </li>
             <li>
-              <a href="#"><h3>DEF 5678</h3></a>
+              <a href="filesDashboard.html"><h3>DEF 5678</h3></a>
             </li>
             <li>
-              <a href="#"><h3>GHI 9012</h3></a>
+              <a href="filesDashboard.html"><h3>GHI 9012</h3></a>
             </li>
           </ul>
 				</main>
