--- a/maquettes/classStatus.html
+++ b/maquettes/classStatus.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>REPL editor - fichiers</title>
+        <title>REPL editor - status</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -20,26 +20,38 @@
             </div>
         </header>
 
-				<main class="files-list list">
-          <button class="btn btn-lg btn-success add">Nouveau fichier <span class="glyphicon glyphicon-plus"></span></button>
+				<main class="status">
           <div class="text-center">
-            <h2 class="header">CBA 1234: Introduction à blabla</h2>
+            <h2 class="header">CBA 1234: foo1.js</h2>
           </div>
           <ul>
             <li>
-              <a href="editor.html"><h3>foo1.js</h3></a>
+              <a href="editor.html"><h3>Étudiant 1</h3></a>
+              <div class="info header">
+                Changements: <span class="green">+11</span>, <span class="red">-5</span> <br />
+                Dernière mise-à-jour: 27 janvier, 10h53
+              </div>
             </li>
             <li>
-              <a href="editor.html"><h3>foo2.go</h3></a>
+              <a href="editor.html"><h3>Étudiant 2</h3></a>
+              <div class="info header">
+                Changements: <span class="green">+1</span>, <span class="red">-3</span> <br />
+                Dernière mise-à-jour: 27 janvier, 10h54
+              </div>
             </li>
             <li>
-              <a href="editor.html"><h3>foo3.pl</h3></a>
+              <a href="editor.html"><h3>Étudiant 3</h3></a>
+              <div class="info header">
+                Changements: <span class="green">+20</span>, <span class="red">-10</span> <br />
+                Dernière mise-à-jour: 27 janvier, 10h52
+              </div>
             </li>
             <li>
-              <a href="editor.html"><h3>foo4.pro</h3></a>
-            </li>
-            <li>
-              <a href="editor.html"><h3>foo5.ex</h3></a>
+              <a href="editor.html"><h3>Étudiant 4</h3></a>
+              <div class="info header">
+                Changements: <span class="green">+3</span>, <span class="red">-3</span> <br />
+                Dernière mise-à-jour: 27 janvier, 10h45
+              </div>
             </li>
           </ul>
 				</main>
